--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ceres",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,11 +20,12 @@
     "autoprefixer": "^6.0.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-csso": "^1.0.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-csso": "^1.0.1",
+    "gulp-load-plugins": "^1.0.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
-    "postcss-simple-vars": "^1.0.1",
+    "postcss-color-function": "^2.0.0",
+    "postcss-simple-vars": "^1.1.0",
     "require-dir": "^0.3.0"
   }
 }
